@@ -81,6 +81,7 @@ S3method(makeRLearner,classif.qda)
 S3method(makeRLearner,classif.quaDA)
 S3method(makeRLearner,classif.randomForest)
 S3method(makeRLearner,classif.randomForestSRC)
+S3method(makeRLearner,classif.randomUniformForest)
 S3method(makeRLearner,classif.rda)
 S3method(makeRLearner,classif.rpart)
 S3method(makeRLearner,classif.rrlda)
@@ -120,6 +121,7 @@ S3method(makeRLearner,regr.penalized.ridge)
 S3method(makeRLearner,regr.plsr)
 S3method(makeRLearner,regr.randomForest)
 S3method(makeRLearner,regr.randomForestSRC)
+S3method(makeRLearner,regr.randomUniformForest)
 S3method(makeRLearner,regr.rpart)
 S3method(makeRLearner,regr.rsm)
 S3method(makeRLearner,regr.rvm)
@@ -200,6 +202,7 @@ S3method(predictLearner,classif.qda)
 S3method(predictLearner,classif.quaDA)
 S3method(predictLearner,classif.randomForest)
 S3method(predictLearner,classif.randomForestSRC)
+S3method(predictLearner,classif.randomUniformForest)
 S3method(predictLearner,classif.rda)
 S3method(predictLearner,classif.rpart)
 S3method(predictLearner,classif.rrlda)
@@ -238,6 +241,7 @@ S3method(predictLearner,regr.penalized.ridge)
 S3method(predictLearner,regr.plsr)
 S3method(predictLearner,regr.randomForest)
 S3method(predictLearner,regr.randomForestSRC)
+S3method(predictLearner,regr.randomUniformForest)
 S3method(predictLearner,regr.rpart)
 S3method(predictLearner,regr.rsm)
 S3method(predictLearner,regr.rvm)
@@ -360,6 +364,7 @@ S3method(trainLearner,classif.qda)
 S3method(trainLearner,classif.quaDA)
 S3method(trainLearner,classif.randomForest)
 S3method(trainLearner,classif.randomForestSRC)
+S3method(trainLearner,classif.randomUniformForest)
 S3method(trainLearner,classif.rda)
 S3method(trainLearner,classif.rpart)
 S3method(trainLearner,classif.rrlda)
@@ -398,6 +403,7 @@ S3method(trainLearner,regr.penalized.ridge)
 S3method(trainLearner,regr.plsr)
 S3method(trainLearner,regr.randomForest)
 S3method(trainLearner,regr.randomForestSRC)
+S3method(trainLearner,regr.randomUniformForest)
 S3method(trainLearner,regr.rpart)
 S3method(trainLearner,regr.rsm)
 S3method(trainLearner,regr.rvm)
